--- a/pages/contact.html
+++ b/pages/contact.html
@@ -25,7 +25,7 @@
         <!-- Title -->
         <h1 class="container text-center my-4 display-4">CHINESE TOURISM</h1>
         <!-- Logo -->
-        <a class="brand" href="index.html"><img src="../image/logo1.0.png" alt="Logo"></a>
+        <a class="brand" href="../index.html"><img src="../image/logo1.0.png" alt="Logo"></a>
         <!-- Navigation Bar -->
         <nav class="navbar navbar-expand-lg navbar-light mx-auto">
             <!-- Toggler/collapsibe Button -->
@@ -36,7 +36,7 @@
             <!-- Navbar -->
             <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="info.html">Info</a></li>
                     <li class="nav-item"><a class="nav-link" href="service.html">Service</a></li>
                     <li class="nav-item"><a class="nav-link" href="booking.html">Booking</a></li>
