--- a/html/game.html
+++ b/html/game.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Chinese Tourism</title>
+        <title>Chinese Quiz</title>
         <!-- Set the viewport property of the web page -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Google font: 4 sorts -->
@@ -10,6 +10,7 @@
         <link rel='stylesheet'href="https://fonts.googleapis.com/css?family=Nova Flat">
         <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Roboto">
         <link rel='stylesheet'href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,300'>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Style+Script">
         <!-- Link to external CSS file -->
         <link href="../css/style.css" rel="stylesheet">
        <!-- This script tag loads the jQuery-3.7.1 library from the provided URL -->
@@ -46,21 +47,45 @@
             </nav>
         </header>
        <!--Main content -->
-        <main class="container text-center mt-4 ">
-             <!-- tagline -->
-             <h2 class="display-6">Welcome to China</h2>
-            <!-- Image Gallery -->
-            <div class="row text-center mt-3 ">
-                <div class="col-sm-4 mb-3"><img src="../image/xinjiang.jpg" class="img-fluid" onclick="showText('xinjiang')"></div>
-                <div class="col-sm-4 mb-3"><img src="../image/qinghai.jpg" class="img-fluid" onclick="showText('qinghai')"></div>
-                <div class="col-sm-4 mb-3"><img src="../image/hnu.jpg" class="img-fluid" onclick="showText('hnu')"></div>
-                <div class="col-sm-4 mb-3"><img src="../image/yuelu.jpg" class="img-fluid" onclick="showText('yuelu')"></div>
-                <div class="col-sm-4 mb-3"><img src="../image/shenzhen.jpg" class="img-fluid" onclick="showText('shenzhen')"></div>
-                <div class="col-sm-4 mb-3"><img src="../image/wusong.jpg" class="img-fluid" onclick="showText('wusong')"></div>
+       <main class="container text-center mt-4">
+        <!-- tagline -->
+        <h2 class="display-6">Let's play the game</h2>
+        <div class="row py-4">
+            <div class="col-lg-8 mx-auto"> 
+                <!-- game area -->
+                <div class="container">
+                    <div class="card bg-light border-secondary">
+                        <div class="card-body">
+                            <div id="start-screen">
+                                <h3 id="tagline-game" class="my-3 display-4">Chinese Knowledge Quiz</h3>
+                                <button id="start-game" class="btn btn-primary my-4">Start Game</button>
+                            </div>
+                            <div id="game-screen" style="display: none;">
+                                <h4 id="question-game" class="my-4"></h4>
+                                <div id="choices"></div>
+                                <button id="next-question" class="btn btn-primary my-4">next</button>
+                                <button id="restart-game" class="btn btn-secondary my-4" style="display: none;">restart</button>
+                                <div class="progress my-4">
+                                    <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- comment -->
+                <div id="comment-section" class="mt-5">
+                    <h2>Do you want to leave us any additional comment?</h2>
+                    <form id="comment-form">
+                        <div class="form-floating mb-3">
+                            <textarea class="form-control form-control-lg border-secondary" id="comment-game" placeholder="Leave a comment here"></textarea>
+                            <label for="comment">comment</label>
+                        </div>
+                        <button type="submit" class="btn btn-primary">submit</button>
+                    </form>
+                </div>
             </div>
-            <!-- click an image, show some text relating to that image-->
-            <div id="text"></div>
-        </main>
+        </div>
+    </main>
         <!-- Footer -->
         <footer class="text-center py-3">All rights reserved © www.58pic.com</footer>
         <!-- Link to external JavaScript file -->
