--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <li class="nav-item"><a class="nav-link" href="pages/contact.html">Contact</a></li>
                         <li class="nav-item"><a class="nav-link" href="pages/reviews.html">Reviews</a></li>
                         <li class="nav-item"><a class="nav-link" href="pages/questions.html">Questions</a></li>
-                        <li class="nav-item"><a class="nav-link" href="pages/">Game</a></li>
+                        <li class="nav-item"><a class="nav-link" href="pages/game.html">Game</a></li>
                     </ul>
                 </div>
             </nav>
@@ -50,7 +50,6 @@
              <!-- tagline -->
              <h2 class="display-6">Welcome to China</h2>
             <!-- Image Gallery -->
-<<<<<<< HEAD:index.html
             <div class="row text-center mt-3">
                 <div class="col-sm-4 mb-3"><img src="image/xinjiang.jpg" class="img-fluid" onclick="showText('xinjiang')"></div>
                 <div class="col-sm-4 mb-3"><img src="image/qinghai.jpg" class="img-fluid" onclick="showText('qinghai')"></div>
@@ -58,15 +57,6 @@
                 <div class="col-sm-4 mb-3"><img src="image/yuelu.jpg" class="img-fluid" onclick="showText('yuelu')"></div>
                 <div class="col-sm-4 mb-3"><img src="image/shenzhen.jpg" class="img-fluid" onclick="showText('shenzhen')"></div>
                 <div class="col-sm-4 mb-3"><img src="image/wusong.jpg" class="img-fluid" onclick="showText('wusong')"></div>
-=======
-            <div class="row text-center mt-3 ">
-                <div class="col-sm-4 mb-3"><img src="../image/xinjiang.jpg" class="img-fluid" onclick="showText('xinjiang')"></div>
-                <div class="col-sm-4 mb-3"><img src="../image/qinghai.jpg" class="img-fluid" onclick="showText('qinghai')"></div>
-                <div class="col-sm-4 mb-3"><img src="../image/hnu.jpg" class="img-fluid" onclick="showText('hnu')"></div>
-                <div class="col-sm-4 mb-3"><img src="../image/yuelu.jpg" class="img-fluid" onclick="showText('yuelu')"></div>
-                <div class="col-sm-4 mb-3"><img src="../image/shenzhen.jpg" class="img-fluid" onclick="showText('shenzhen')"></div>
-                <div class="col-sm-4 mb-3"><img src="../image/wusong.jpg" class="img-fluid" onclick="showText('wusong')"></div>
->>>>>>> master:html/index.html
             </div>
             <!-- click an image, show some text relating to that image-->
             <div id="text"></div>
@@ -74,6 +64,6 @@
         <!-- Footer -->
         <footer class="text-center py-3">All rights reserved © www.58pic.com</footer>
         <!-- Link to external JavaScript file -->
-        <script src="javascript/script.js"></script>
+        <script src="./javascript/script.js"></script>
     </body>
 </html>
