--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="pages/info.html">Info</a></li>
-                        <li class="nav-item"><a class="nav-link" href="service.html">Service</a></li>
-                        <li class="nav-item"><a class="nav-link" href="booking.html">Booking</a></li>
+                        <li class="nav-item"><a class="nav-link" href="pages/service.html">Service</a></li>
+                        <li class="nav-item"><a class="nav-link" href="pages/booking.html">Booking</a></li>
                         <li class="nav-item"><a class="nav-link" href="pages/contact.html">Contact</a></li>
                         <li class="nav-item"><a class="nav-link" href="pages/reviews.html">Reviews</a></li>
                         <li class="nav-item"><a class="nav-link" href="pages/questions.html">Questions</a></li>
