--- a/pages/game.html
+++ b/pages/game.html
@@ -2,14 +2,14 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Chinese Quiz</title>
+        <title>Chinese Tourism-Chinese Quiz</title>
         <!-- Set the viewport property of the web page -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Google font: 4 sorts -->
-        <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Sofia">
-        <link rel='stylesheet'href="https://fonts.googleapis.com/css?family=Nova Flat">
-        <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Roboto">
-        <link rel='stylesheet'href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,300'>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+        <link rel='stylesheet' href="https://fonts.googleapis.com/css?family=Nova+Flat">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+        <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,300'>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Style+Script">
         <!-- Link to external CSS file -->
         <link href="../css/style.css" rel="stylesheet">
@@ -92,3 +92,7 @@
         <script src="../javascript/script.js"></script>
     </body>
 </html>
+<!--Mingxuan Cai is in charge of index and game-->
+<!--Xin Wang is in charge of info and review-->
+<!--Liuying Yang is in charge of contact and question-->
+<!--Linfeng Jiang is in charge of service and booking-->
