--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <!-- Set the viewport property of the web page -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Google font: 4 sorts -->
-        <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Sofia">
-        <link rel='stylesheet'href="https://fonts.googleapis.com/css?family=Nova Flat">
-        <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Roboto">
-        <link rel='stylesheet'href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,300'>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+        <link rel='stylesheet' href="https://fonts.googleapis.com/css?family=Nova+Flat">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+        <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,300'>
         <!-- Link to external CSS file -->
         <link href="css/style.css" rel="stylesheet">
        <!-- This script tag loads the jQuery-3.7.1 library from the provided URL -->
@@ -51,12 +51,12 @@
              <h2 class="display-6">Welcome to China</h2>
             <!-- Image Gallery -->
             <div class="row text-center mt-3">
-                <div class="col-sm-4 mb-3"><img src="image/xinjiang.jpg" class="img-fluid" onclick="showText('xinjiang')"></div>
-                <div class="col-sm-4 mb-3"><img src="image/qinghai.jpg" class="img-fluid" onclick="showText('qinghai')"></div>
-                <div class="col-sm-4 mb-3"><img src="image/hnu.jpg" class="img-fluid" onclick="showText('hnu')"></div>
-                <div class="col-sm-4 mb-3"><img src="image/yuelu.jpg" class="img-fluid" onclick="showText('yuelu')"></div>
-                <div class="col-sm-4 mb-3"><img src="image/shenzhen.jpg" class="img-fluid" onclick="showText('shenzhen')"></div>
-                <div class="col-sm-4 mb-3"><img src="image/wusong.jpg" class="img-fluid" onclick="showText('wusong')"></div>
+                <div class="col-sm-4 mb-3"><img src="image/xinjiang.jpg" class="img-fluid" alt="xinjiang" onclick="showText('xinjiang')"></div>
+                <div class="col-sm-4 mb-3"><img src="image/qinghai.jpg" class="img-fluid" alt="qinghai" onclick="showText('qinghai')"></div>
+                <div class="col-sm-4 mb-3"><img src="image/hnu.jpg" class="img-fluid" alt="hnu" onclick="showText('hnu')"></div>
+                <div class="col-sm-4 mb-3"><img src="image/yuelu.jpg" class="img-fluid" alt="yuelu" onclick="showText('yuelu')"></div>
+                <div class="col-sm-4 mb-3"><img src="image/shenzhen.jpg" class="img-fluid" alt="shenzhen" onclick="showText('shenzhen')"></div>
+                <div class="col-sm-4 mb-3"><img src="image/wusong.jpg" class="img-fluid" alt="wusong" onclick="showText('wusong')"></div>
             </div>
             <!-- click an image, show some text relating to that image-->
             <div id="text"></div>
@@ -67,3 +67,7 @@
         <script src="./javascript/script.js"></script>
     </body>
 </html>
+<!--Mingxuan Cai is in charge of index and game-->
+<!--Xin Wang is in charge of info and review-->
+<!--Liuying Yang is in charge of contact and question-->
+<!--Linfeng Jiang is in charge of service and booking-->
