--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <title>Chinese Tourism</title>
+    <title>Chinese Tourism-contact us</title>
     <!-- Set the viewport property of the web page -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Google font: 4 sorts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
-    <link rel='stylesheet' href="https://fonts.googleapis.com/css?family=Nova Flat">
+    <link rel='stylesheet' href="https://fonts.googleapis.com/css?family=Nova+Flat">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,300'>
     <!-- Link to external CSS file -->
@@ -19,7 +18,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-
 <body>
     <header>
         <!-- Title -->
@@ -116,3 +114,7 @@
     <script src="../javascript/script.js"></script>
 </body>
 </html>
+<!--Mingxuan Cai is in charge of index and game-->
+<!--Xin Wang is in charge of info and review-->
+<!--Liuying Yang is in charge of contact and question-->
+<!--Linfeng Jiang is in charge of service and booking-->
