--- a/pages/questions.html
+++ b/pages/questions.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <title>Questions</title>
+    <title>Chinese Tourism-Common Questions</title>
     <!-- Set the viewport property of the web page -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Google font: 4 sorts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
-    <link rel='stylesheet' href="https://fonts.googleapis.com/css?family=Nova Flat">
+    <link rel='stylesheet' href="https://fonts.googleapis.com/css?family=Nova+Flat">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,300'>
     <!-- Link to external CSS file -->
@@ -18,9 +17,7 @@
     <!-- Bootstrap-5.2.3 CSS and JS library -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-
 </head>
-
 <body>
     <header>
         <!-- Title -->
@@ -88,10 +85,9 @@
                 <div class="accordion" id="questions-accordion">
                         <button class="accordion-button" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                            <h3>More Questions?</h3>
+							<h3>More Questions?</h3>
                         </button>
-                    </h2>
-                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                    <div id="collapseOne" class="accordion-collapse collapse show"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
                             <p>Please contact us, and our customer service team will be happy to assist you.</p>
@@ -120,3 +116,7 @@
     <script src="../javascript/script.js"></script>
 </body>
 </html>
+<!--Mingxuan Cai is in charge of index and game-->
+<!--Xin Wang is in charge of info and review-->
+<!--Liuying Yang is in charge of contact and question-->
+<!--Linfeng Jiang is in charge of service and booking-->
