--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -2,14 +2,14 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Chinese Tourism</title>
+        <title>Chinese Tourism-Customer Reviews</title>
         <!-- Set the viewport property of the web page -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Google font: 4 sorts -->
-        <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Sofia">
-        <link rel='stylesheet'href="https://fonts.googleapis.com/css?family=Nova Flat">
-        <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Roboto">
-        <link rel='stylesheet'href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,300'>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+        <link rel='stylesheet' href="https://fonts.googleapis.com/css?family=Nova+Flat">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+        <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,300'>
         <!-- Link to external CSS file -->
         <link href="../css/style.css" rel="stylesheet">
        <!-- This script tag loads the jQuery-3.7.1 library from the provided URL -->
@@ -17,7 +17,6 @@
         <!-- Bootstrap-5.2.3 CSS and JS library -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">  
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-
     </head>
     <body>
         <header >
@@ -89,19 +88,22 @@
                         <option value="">Select...</option>
                         <option value="us">Ireland</option>
                         <option value="uk">United Kingdom</option>
-                        <!-- Add more options as needed -->
                     </select>
                     <div class="valid-feedback">Validated successfully！</div>
                     <div class="invalid-feedback">Please select your country!</div>
                 </div>
-                <div class="form-group form-check">
+                <div class="form-group form-floating my-4">
+                    <textarea class="form-control form-control-lg border-secondary" placeholder="Leave a comment here"></textarea>
+                    <label for="comment">comment</label>
+                </div>
+                <div class="form-group form-check mb-3">
                     <label class="form-check-label">
                         <input class="form-check-input" type="checkbox" name="remember" required> Agree to terms
                         <div class="valid-feedback">Validated successfully！</div>
                         <div class="invalid-feedback">You must agree to the terms to submit.</div>
                     </label>
                 </div>
-                <button type="submit" class="btn btn-primary" onclick="thankYou()">Submit</button>
+                <button type="submit" class="btn btn-primary" onclick="alert">Submit</button>
             </form>
         </div>
         <!-- Footer -->
@@ -110,3 +112,7 @@
         <script src="../javascript/script.js"></script>
     </body>
 </html>
+<!--Mingxuan Cai is in charge of index and game-->
+<!--Xin Wang is in charge of info and review-->
+<!--Liuying Yang is in charge of contact and question-->
+<!--Linfeng Jiang is in charge of service and booking-->
