--- a/pages/service.html
+++ b/pages/service.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Service</title>
+    <title>Chinese Tourism-Service</title>
     <!-- Set the viewport property of the web page -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Google font: 4 sorts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nova Flat">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nova+Flat">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300">
     <!-- Link to external CSS file -->
@@ -19,7 +19,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-
 <body>
     <header class="text-center">
         <!-- Title -->
@@ -47,7 +46,6 @@
             </div>
         </nav>
     </header>
-
     <!--Main content -->
     <main class="container text-center mt-4">
         <!-- Photo gallery -->
@@ -63,7 +61,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="col-sm-4">
                     <div class="service">
                         <img src="../image/planyourtrip.jpeg" alt="Plan your trip" class="img-fluid">
@@ -73,7 +70,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="col-sm-4">
                     <div class="service">
                         <img src="../image/helpandadvice.jpeg" alt="Help and advice" class="img-fluid">
@@ -86,11 +82,13 @@
             </div>
         </section>
     </main>
-
     <!-- Footer -->
     <footer class="text-center py-3">All rights reserved © www.58pic.com</footer>
     <!-- Link to external JavaScript file -->
     <script src="../javascript/script.js"></script>
 </body>
 </html>
-
+<!--Mingxuan Cai is in charge of index and game-->
+<!--Xin Wang is in charge of info and review-->
+<!--Liuying Yang is in charge of contact and question-->
+<!--Linfeng Jiang is in charge of service and booking-->
